RESOLVED FIXED33067
REGRESSION (r47440): Incomplete repaint at macworldexpo.com
https://bugs.webkit.org/show_bug.cgi?id=33067
Summary REGRESSION (r47440): Incomplete repaint at macworldexpo.com
mitz
Reported 2009-12-30 17:10:31 PST
At http://www.macworldexpo.com/, the right edge of the “What’s New” sidebar is clipped off whenever the contents of the “Featured Exhibitor” box at the bottom of the middle column changes.
Attachments
Reduction (563 bytes, text/html)
2009-12-30 17:47 PST, mitz
no flags
Set RenderTableSection::m_hasOverflowingCell correctly (20.12 KB, patch)
2009-12-30 18:45 PST, mitz
simon.fraser: review+
mitz
Comment 1 2009-12-30 17:26:49 PST
mitz
Comment 2 2009-12-30 17:28:44 PST
mitz
Comment 3 2009-12-30 17:47:55 PST
Created attachment 45691 [details] Reduction
mitz
Comment 4 2009-12-30 18:45:57 PST
Created attachment 45693 [details] Set RenderTableSection::m_hasOverflowingCell correctly
WebKit Review Bot
Comment 5 2009-12-30 18:48:21 PST
style-queue ran check-webkit-style on attachment 45693 [details] without any errors.
mitz
Comment 6 2009-12-31 10:41:57 PST
Note You need to log in before you can comment on or make changes to this bug.