<rdar://problem/7503279> REGRESSION (r47440): Incomplete repaint at macworldexpo.com https://bugs.webkit.org/show_bug.cgi?id=33067

Reviewed by Simon Fraser.

WebCore:

Test: fast/repaint/table-cell-overflow.html

* rendering/RenderTableCell.h:
(WebCore::RenderTableCell::hasVisibleOverflow): Added.
* rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::layoutRows): Set m_hasOverflowingCell if
any cell has visible overflow, like it was before r47440.

LayoutTests:

* fast/repaint/table-cell-overflow-expected.checksum: Added.
* fast/repaint/table-cell-overflow-expected.png: Added.
* fast/repaint/table-cell-overflow-expected.txt: Added.
* fast/repaint/table-cell-overflow.html: Added.



Canonical link: https://commits.webkit.org/44096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52683 268f45cc-cd09-0410-ab3c-d52691b4dbfc