WebCore/rendering/RenderTableCell.h
@@ -99,6 +99,8 @@ public:
 
     virtual void setOverrideSize(int);
 
+    bool hasVisibleOverflow() const { return m_overflow; }
+
 protected:
     virtual void styleWillChange(StyleDifference, const RenderStyle* newStyle);
     virtual void styleDidChange(StyleDifference, const RenderStyle* oldStyle);
