WebCore/rendering/RenderTableSection.cpp
@@ -646,12 +646,11 @@ int RenderTableSection::layoutRows(int toAdd)
             if (r < totalRows - 1 && cell == cellAt(r + 1, c).cell)
                 continue;
             addOverflowFromChild(cell);
+            m_hasOverflowingCell |= cell->hasVisibleOverflow();
         }
     }
-    m_hasOverflowingCell = m_overflow;
-    
-    statePusher.pop();
 
+    statePusher.pop();
     return height();
 }
 
